# sqmap

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
benchmarks/: tomography_methods.py  tomography_methods_and_basis.py  tomography_methods_on_noisy_simulator.py
examples/: fake_backend.py  fake_backend_delay.py  real_backend.py  simulator.py
src/sqmap/: backends.py  circuits.py  execution.py
src/sqmap/_cli/: bloch_tomography_chip_plot.py  bloch_tomography_plot.py  bloch_tomography_plot_cartopy.py  bloch_tomography_plot_concise.py  precision_evolution.py
src/sqmap/visualisation/: chip.py  concise.py  flatmap.py  flatmap_cartopy.py  transformers.py
