[metadata]
name = sqmap
url = https://github.com/nelimee/sqmap
author = Adrien Suau
description = Single Qubit MAPping package developped during the Quantum Computing Summer School 2021 at Los Alamos National Laboratory
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license_files = LICENSE
keywords = quantum tomography single qubit mapping visualisation
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find_namespace:
package_dir=
    = src                 
install_requires =
    sqt

[options.packages.find]
where = src
exclude = tests*

[options.entry_points]
console_scripts =
    sqmap_bloch_tomography_plot = sqmap._cli.bloch_tomography_plot:main
    sqmap_bloch_tomography_chip_plot = sqmap._cli.bloch_tomography_chip_plot:main

[options.extras_require]
dev =
    ipython
    black
all =
    %(dev)s
